Fixed alignment issue in blog section

--- a/output.css
+++ b/output.css
@@ -606,11 +606,6 @@ video {
   margin-right: auto;
 }
 
-.my-0 {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -629,10 +624,6 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
 }
 
 .mt-12 {
@@ -663,10 +654,6 @@ video {
   height: 1rem;
 }
 
-.h-96 {
-  height: 24rem;
-}
-
 .h-full {
   height: 100%;
 }
@@ -691,16 +678,24 @@ video {
   width: 100%;
 }
 
-.w-32 {
-  width: 8rem;
-}
-
 .w-40 {
   width: 10rem;
 }
 
+.max-w-xl {
+  max-width: 36rem;
+}
+
+.max-w-\[30rem\] {
+  max-width: 30rem;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .items-center {
@@ -752,6 +747,11 @@ video {
   border-color: rgb(173 153 112 / var(--tw-border-opacity));
 }
 
+.bg-\[\#f8f9fa\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#f9f9f9\] {
   --tw-bg-opacity: 1;
   background-color: rgb(249 249 249 / var(--tw-bg-opacity));
@@ -767,10 +767,6 @@ video {
   background-color: rgb(173 153 112 / var(--tw-bg-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-\[\#fdfdfd\] {
   --tw-bg-opacity: 1;
   background-color: rgb(253 253 253 / var(--tw-bg-opacity));
@@ -779,23 +775,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f8f9fa\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
-}
-
-.bg-\[url\(\'\.\/assets\/microphones-module-1200x300-rgb\.png\'\)\] {
-  background-image: url('./assets/microphones-module-1200x300-rgb.png');
-}
-
-.bg-center {
-  background-position: center;
-}
-
-.bg-no-repeat {
-  background-repeat: no-repeat;
 }
 
 .p-4 {
@@ -822,20 +801,12 @@ video {
   padding-right: 1rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
 .pt-8 {
   padding-top: 2rem;
 }
 
 .pb-6 {
   padding-bottom: 1.5rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
 }
 
 .pt-12 {
@@ -848,10 +819,6 @@ video {
 
 .align-middle {
   vertical-align: middle;
-}
-
-.font-\[Inter\2c _sans-serif\] {
-  font-family: Inter, sans-serif;
 }
 
 .text-2xl {
@@ -885,10 +852,6 @@ video {
   line-height: 1.625;
 }
 
-.leading-\[1\.2\] {
-  line-height: 1.2;
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -908,45 +871,10 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-
-.text-\[rgba\(118\2c 118\2c 118\2c 1\)\] {
-  color: rgba(118,118,118,1);
-}
-
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.text-\[rgba\(0\2c 123\2c 255\2c 1\)\] {
-  color: rgba(0,123,255,1);
-}
-
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.visited\:text-\[rgba\(173\2c 153\2c 112\2c 1\)\]:visited {
-  color: rgba(173,153,112,1);
-}
-
-.open\:text-\[rgba\(72\2c 72\2c 72\2c 1\)\][open] {
-  color: rgba(72,72,72,1);
-}
-
-.open\:text-\[rgba\(173\2c 153\2c 112\2c 1\)\][open] {
-  color: rgba(173,153,112,1);
 }
 
 .hover\:bg-white:hover {
@@ -956,10 +884,6 @@ video {
 
 .hover\:text-\[rgba\(192\2c 176\2c 144\2c 1\)\]:hover {
   color: rgba(192,176,144,1);
-}
-
-.active\:text-\[rgba\(173\2c 153\2c 112\2c 1\)\]:active {
-  color: rgba(173,153,112,1);
 }
 
 @media (min-width: 640px) {
@@ -991,10 +915,6 @@ video {
 
   .md\:place-items-center {
     place-items: center;
-  }
-
-  .md\:gap-8 {
-    gap: 2rem;
   }
 
   .md\:text-3xl {
@@ -1125,14 +1045,14 @@ video {
     line-height: 2.5rem;
   }
 
-  .lg\:text-gray-200 {
-    --tw-text-opacity: 1;
-    color: rgb(229 231 235 / var(--tw-text-opacity));
-  }
-
   .lg\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .lg\:text-gray-200 {
+    --tw-text-opacity: 1;
+    color: rgb(229 231 235 / var(--tw-text-opacity));
   }
 }
 
